# cold-storage-planning-agent

./: .editorconfig  .env.example  .gitignore  AGENTS.md  CODEX_TASKS.md  CONTRIBUTING.md  Makefile  README.md  docker-compose.yml
backend/: .gitignore  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/helpers/: __init__.py  frozen_outbox_envelope_v1.py  frozen_scheme_source_archive_v1.py
backend/alembic/versions/: 0001_initial.py  0002_add_calculation_runs.py  0003_add_version_metadata.py  0004_add_coefficient_registry.py  0005_add_scheme_tables.py  0006_add_scheme_candidate_details.py  0007_add_knowledge_base.py  0008_add_planning_agent.py  0009_add_reports.py  0010_add_idempotency_record.py  0011_fix_supersedes_fk.py  0012_add_scheme_content_hash.py  0013_add_report_templates_and_artifacts.py  0014_add_approval_fields.py  0015_add_active_slot.py  0016_add_claimed_at.py  0017_add_claim_fencing.py  0018_add_artifact_claim_version.py  0019_add_localization_columns.py  0020_add_cleanup_debt.py  0021_cleanup_debt_lock_expires.py  0022_add_claim_version_audit_log.py  0023_deletion_outbox_receipts.py  0024_receipt_status_deleted_at.py  0025_add_outbox_claim_fields.py  0026_add_orchestration_persistence.py  0027_separate_requested_and_resolved_request_identity.py  0028_add_transaction_b_constraints.py  0029_add_scheme_run_production_provenance.py  0030_add_weight_revision_governance_constraints.py  0031_add_weight_revision_active_approved_unique.py  (+10 more)
backend/scripts/: capture_golden_artifact.py
backend/tests/: conftest.py
(+595 files in other folders)
