[project]
name = "cold-storage-agent"
version = "0.1.0"
description = "Cold storage planning design agent V1"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13",
  "fastapi>=0.115",
  "jsonschema>=4.20",
  "openpyxl>=3.1",
  "pydantic>=2.8",
  "pydantic-settings>=2.4",
  "pymupdf>=1.24",
  "python-docx>=1.1",
  "python-multipart>=0.0.9",
  "sqlalchemy>=2.0",
  "psycopg2-binary>=2.9",
  "uvicorn>=0.30",
]

[dependency-groups]
dev = [
  "httpx>=0.27",
  "mypy>=1.11",
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.6",
]

[tool.pytest.ini_options]
markers = [
    "postgresql: marks tests as requiring PostgreSQL",
    "sqlite: marks tests as requiring SQLite",
    "integration: marks tests as integration tests",
]
pythonpath = ["src"]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
